# cpp17

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Src/Containers/: CountWords.h  FilteringDuplicates.h  TodoList.h  VectorQuickRemove.h
Src/Itearators/: MyIterableRange.h
Src/Iterators/: CstringSentinel.h  DotProduct.h  Fibonacci.h  MyIterableRange.h  ZipIterator.h
Src/Lambda/: CartesianProduct.h  Concatenation.h  MulticallSameInput.h  PredicatesConjuntion.h  SimpleConcat.h  basicLambda.h  consumer.h  transform_if.h
Src/STL_Algorithms/: Copy.h  Copy.hpp  PrefixTree.hpp  Sorting.h  Sorting.hpp
